Fix some bug in the code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="card-title mb-4">Calculate Profit Share</h2>
                 <form id="profitForm">
                     <div class="form-group">
-                        <label for="showName">Name of the Show *</label>
+                        <label for="showName">Name of the Show </label>
                         <input type="text" 
                                class="form-control" 
                                id="showName" 
@@ -36,7 +36,7 @@
                         </small>
                     </div>
                     <div class="form-group">
-                        <label for="totalAmount">Total Amount ($) *</label>
+                        <label for="totalAmount">Total Amount ($)</label>
                         <input type="number" 
                                class="form-control" 
                                id="totalAmount" 
@@ -49,7 +49,7 @@
                         </small>
                     </div>
                     <div class="form-group">
-                        <label for="numberOfCompanies">Number of Companies (2-10) *</label>
+                        <label for="numberOfCompanies">Number of Companies (2-10)</label>
                         <input type="number" 
                                class="form-control" 
                                id="numberOfCompanies" 
