--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
     <script src="js/script.js"></script>
+    <script src="js/saveResults.js"></script>
 </body>
 </html> 
