change the save file .txt to pdf

--- a/index.html
+++ b/index.html
@@ -105,5 +105,6 @@
     <!-- Custom JS -->
     <script src="js/script.js"></script>
     <script src="js/saveResults.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html> 
