--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -162,5 +163,9 @@
     <script src="js/contact.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="js/charts.js"></script>
+    <script type="module">
+        import { initDarkMode } from './js/darkMode.js';
+        document.addEventListener('DOMContentLoaded', initDarkMode);
+    </script>
 </body>
 </html> 
