add google analytics

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <link rel="manifest" href="/ProfitSharing-APP/manifest.json">
     <meta name="theme-color" content="#007bff">
     <link rel="apple-touch-icon" href="/ProfitSharing-APP/assets/icons/icon-192x192.png">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7G2HHLDETQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-7G2HHLDETQ');
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -185,5 +194,6 @@
             });
         }
     </script>
+    <script src="js/analytics.js"></script>
 </body>
 </html>
